# Svarn

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  GenerateLinuxBuild.sh  README.md  RunLinuxBuild.sh  imgui.ini  premake5.lua
Sandbox/: CMakeLists.txt
Sandbox/shaders/: blue.fs  blue.vs  cerberus.fs  cerberus.vs  depth_pass.frag  depth_pass.fs  depth_pass.vert  depth_pass.vs  equirectToCube.cs  mesh.frag  mesh.vert  pbr.fs  pbr.vs  quad.frag  quad.vert  triangle.fs  triangle.vs
Sandbox/src/: CMakeLists.txt  SandboxApp.cpp
SvarnEngine/: CMakeLists.txt
SvarnEngine/src/: CMakeLists.txt  Svarn.h  SvarnEnginePCH.cpp  svpch.cpp  svpch.h
SvarnEngine/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
SvarnEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLRenderingContext.cpp  OpenGLRenderingContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
SvarnEngine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
SvarnEngine/src/Svarn/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.h
SvarnEngine/src/Svarn/Core/: ThreadHandler.cpp  ThreadHandler.h
SvarnEngine/src/Svarn/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
SvarnEngine/src/Svarn/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
SvarnEngine/src/Svarn/Log/: Formatters.h
SvarnEngine/src/Svarn/Math/: Transform.h
SvarnEngine/src/Svarn/Renderer/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Primitives.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RenderingContext.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
SvarnEngine/src/Svarn/Renderer/Shaders/: directional_shadow_map.vert  noise.glsl  pbr.frag  pbr.vert  quad.frag  quad.vert  terrain.frag  terrain.vert
SvarnEngine/src/Svarn/Scene/: Camera.h  DirectionalLight.cpp  DirectionalLight.h  PerspectiveCamera.cpp  PerspectiveCamera.h
SvarnEngine/src/Svarn/Terrain/: TerrainStreamer.h
cmake/: CommonProperties.cmake  SetupConfigurations.cmake
